--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 
 <video width="320" height="240" controls>
-  <source src="MC-4.mov" type="video/mov">
+  <source src="MC-4.mp4" type="video/mp4">
 </video>
 
 </body>
